syntax = "proto3";
package dream11.od.dto.v1;

import "dream11/od/dto/v1/service_task.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/dream11/odin/proto/gen/go/dream11/od/dto/v1";

message Environment {
  optional int64 id = 1;
  optional google.protobuf.Timestamp created_at = 2;
  optional google.protobuf.Timestamp updated_at = 3;
  optional string created_by = 4;
  optional int32 version = 5;
  optional int64 org_id = 6;
  optional string provider_account_name = 7;
  optional string name = 8;
  optional google.protobuf.Struct service_accounts_snapshot = 9;
  optional string status = 10;
  optional google.protobuf.Timestamp auto_deletion_time = 11;
  repeated dream11.od.dto.v1.ServiceTask services = 12;
  repeated AccountInformation account_information = 13;
}

message AccountInformation {
  string provider_account_name = 1;
  google.protobuf.Struct service_accounts_snapshot = 2;
  string status = 3;
}

message EnvironmentSummary {
  string name = 1;
  string account = 2;
  string state = 3;
}
